--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -136,8 +136,6 @@
             android:layout_height="wrap_content"
             android:background="#fff"
             app:calendar_padding="10dp"
-            app:current_day_lunar_text_color="#ff0000"
-            app:current_day_text_color="#ff0000"
             app:current_month_lunar_text_color="#CFCFCF"
             app:current_month_text_color="#333333"
             app:lunar_text_size="10sp"
@@ -151,12 +149,11 @@
             app:other_month_lunar_text_color="#e1e1e1"
             app:other_month_text_color="#e1e1e1"
             app:scheme_lunar_text_color="#CFCFCF"
-            app:scheme_text="假"
+            app:scheme_text=""
             app:scheme_text_color="#333"
             app:scheme_theme_color="#128c4b"
             app:selected_lunar_text_color="#128c4b"
-            app:selected_text_color="#128c4b"
-            app:selected_theme_color="#80cfcfcf"
+            app:selected_theme_color="#128c4b"
             app:week_background="#fff"
             app:week_bar_height="46dp"
             app:month_view="com.haibin.calendarviewproject.custom.CustomMonthView"
@@ -167,14 +164,15 @@
             app:week_start_with="mon"
             app:week_text_size="10sp"
             app:year_view_week_height="0dp"
-            app:year_view_week_text_color="#666666"
+
             app:year_view_week_text_size="7sp"
             app:year_view_background="#f6f6f6"
             app:year_view_day_text_color="#333333"
             app:year_view_day_text_size="8sp"
-            app:year_view_month_text_color="#ff0000"
+
             app:year_view_month_text_size="20sp"
-            app:year_view_scheme_color="#f17706" />
+            app:year_view_scheme_color="#f17706"
+            />
 
 
         <android.support.v4.widget.NestedScrollView
